(Format: Year/Month/Day)
Changes for 0.9.12
*05/01/20:
  * Close #1105048 (thanx to the openbsd-folks)
    minor issues with fluxbox-generate_menu
  * Close #1105041 (thanx to the openbsd-folks)
    execl needs NULL termination, on 64-bit-systems '0' would expand
    expand to a 32bit integer, not a 64bit pointer.
    src/FbCommands.cc util/fbrun/FbRun.cc
*05/01/15:
  * Added menutest.cc to src/tests (Henrik)
    testing menu parser and theme
*05/01/14:
  * Fix for #1091710 (SystemTray is not covered by StyleStuff) (Mathias)
    SystemTray is now configurable via styles thru the 
    toolbar.systray.* - resource, it falls back to the look of the clock
    SystemTray.cc/hh ToolFactory.cc/hh
*05/01/12:
  * Fix for #1099278, #1099950 (Warnings on amd64) (thanx Barry Schwartz)
    Resources.cc FbTk/FbWindow.cc FbTk/TextureRender.cc
  * Updated ko_KR - (thanx Jo Hyunseok)
    nls/ko_KR/Translation.m
*05/01/10:
  * Fix for #1087220 (WithdrawnState handling) (Mathias)
    fluxbox.cc
  * Fix position initialisation from apps file (Simon)
    Window.cc
*05/01/05:
  * Tidy up initialisation a bit better. Handlers can still use "action" 
    functions (e.g. stick()), but those functions should now check if 
    isInitialised and only set the state variables (not send signals 
    etc) if not.
    Window.hh/cc Ewmh.cc
  * Fix for BScreen::reassociateWindow (Mathias)
    Simon's last changes made fluxbox crash when "Sticky" or "Workspace"
	options in the apps-file where used. This fix also solves <Current> and
	<SemiFollow>-Deiconifymode for Iconbar, when Iconbar is in
	<Icons-only>-mode
   Screen.cc IconButton.cc
*05/01/04:
  * Added apps to fluxbox-generate_menu (thanx to Uwe Weissenbacher <UweWeissenbacher@gmx.net>)
  * Added ko_KR (thanx Jo Hyunseok <ttrand at gmail dot com>)
  * Added --with-style=/path/to/default/style (thanx php-code)
  * Updated ru_RU (thanx php-coder)
    ru_RU/Translation.m
  * Fix some initialisation states, especially window placement with no 