@@ -1,5 +1,8 @@
 (Format: Year/Month/Day)
 Changes for 0.9.12
+*05/01/21:
+  * Fix tab detaching - the window wasn't shown (Simon)
+    Window.cc
 *05/01/20:
   * Close #1105048 (thanx to the openbsd-folks)
     minor issues with fluxbox-generate_menu
